--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -23,8 +23,6 @@
 
 .navBar {
     position: absolute;
-    left: 0;
-    right: 0;
     background-color: transparent;
     flex: 1;
     display: flex;
@@ -41,7 +39,32 @@
     right: 35px;
 }
 
+@media (min-width: 985px) {
+    .navBar {
+        right: 0;
+        left: 0;
+    }
+}
+
+@media (max-width: 984px) and (min-width: 721px) {
+    .navBar {
+        right: 0;
+        left: 0;
+    }
+
+}
+
 @media (max-width: 720px) {
+    .navBar {
+        right: 0;
+        left: 0;
+    }
+    .header {
+        margin: 15px;
+        margin-top: 15px;
+        padding: 0;
+        padding-top: 0;
+    }
     .header__logo {
         position: absolute;
         top: -6px;
