--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -87,7 +87,7 @@ a {
 
     .navBar {
         height: 100px;
-        top: 25px;
+        top: 50px;
     }
 
     .navBar li {
